fixing position on small devices

--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -74,7 +74,7 @@
   .about-page {
     .text-zone {
       left: 20%;
-      top: 30%;
+      top: 25%;
       transform: none;
       width: 70%;
       display: block;
