--- a/react-portfolio/src/components/Portfolio/index.scss
+++ b/react-portfolio/src/components/Portfolio/index.scss
@@ -156,7 +156,7 @@
 @media screen and (max-width: 1100px) {
   .portfolio-page {
     .text-zone {
-      left: 15%;
+      left: 16%;
       top: 45%;
       width: 80%;
 
